--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -8,7 +8,7 @@
 import { Icon } from 'astro-icon/components'
 ---
 
-<footer class="footer [.mode-dark_&]:!text-neutral-400">
+<footer id="contact" class="footer [.mode-dark_&]:!text-neutral-400">
 	<div class="footer__container">
 		<div class="footer__row">
 			<div class="footer__col col-span-4 lg:col-span-2">
