--- a/src/layouts/CaseStudyDesignLayout.astro
+++ b/src/layouts/CaseStudyDesignLayout.astro
@@ -51,7 +51,7 @@ const SEO = {
 	</Section>
 
 	<!-- About the project -->
-	<Section id="about-project">
+	<Section id="about">
 		<Row classes="collection-body basic-text basic-text--lg">
 			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">About the project</h2>
@@ -66,7 +66,7 @@ const SEO = {
 	</Section>
 
 	<!-- What we did -->
-	<Section id="what-we-did">
+	<Section id="experience">
 		<Row classes="collection-body basic-text basic-text--lg">
 			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">What we did</h2>
