--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,9 +11,9 @@ import Button from '../components/ui/Button.astro'
 // Content
 // - SEO
 const SEO = {
-	title: 'Oops! Foxi Lost the Trail - Page Not Found',
+	title: 'Oops! Milo Missed a Beat - Page Not Found',
 	description:
-		" Looks like we chased our tail and lost the page. Don't worry, let's get you back on the Foxi trail!"
+		"Looks like we hit a wrong note and couldn't find the page. Don’t worry, let’s get you back in tune with Milo!"
 }
 ---
 
