--- a/src/pages/index-image.astro
+++ b/src/pages/index-image.astro
@@ -70,7 +70,9 @@ const imageSource = '/hero/hero-image-primary.png'
 							<a class="text-inherit" href="tel:+13235550198">+1 (323) 555-0198</a>
 						</li>
 						<li class="animate">Remote Friendly</li>
-						<li class="animate"><a class="text-inherit" href="#">@milo.design</a></li>
+						<li class="animate">
+							<a class="text-inherit" href="#">@milo.design</a>
+						</li>
 					</ul>
 				</div>
 			</Col>
