footer small fixes

--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -14,14 +14,14 @@ import { Icon } from 'astro-icon/components'
 			<div class="footer__col col-span-2 hidden lg:block"></div>
 			<div class="footer__col col-span-4 lg:col-span-5">
 				<span
-					class="animate absolute -left-40 -top-56 -z-10 block size-80 rounded-full bg-primary-400 md:-left-48 md:-top-80 md:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
+					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover md:-left-72 md:-top-72 md:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
 				></span>
-				<h2 class="z-10 text-6xl font-normal lg:text-9xl">
+				<h2 class="font-noxrmal z-10 text-6xl not-italic lg:text-9xl">
 					Let's <br />Connect
 				</h2>
 			</div>
 			<div class="footer__col col-span-4 lg:col-span-5">
-				<p class="text-lg text-neutral-500">
+				<p class="font-headings text-lg leading-8 text-neutral-500">
 					I'm remote-friendly and always open to new opportunities. Feel free to email me at
 					<a
 						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
