minor style changes in menu

--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -51,7 +51,7 @@ import { Icon } from 'astro-icon/components'
 
 	<style>
 		.footer {
-			@apply relative flex min-h-[800px] items-end py-12 text-neutral-600 lg:py-40 dark:text-neutral-400;
+			@apply relative flex min-h-[600px] items-end py-12 text-neutral-600 lg:min-h-[800px] lg:py-40 dark:text-neutral-400;
 		}
 		.footer__container {
 			@apply container relative z-[1] mx-auto px-6;
