--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -2,25 +2,21 @@
 // Contact Me
 // ------------
 // Description: A component that displays a contact me section with a title, first column, and second column.
-
-// Components
-// - UI
-import { Icon } from 'astro-icon/components'
 ---
 
 <footer id="contact" class="footer [.mode-dark_&]:!text-neutral-400">
 	<div class="footer__container">
 		<div class="footer__row">
-			<div class="footer__col col-span-2 hidden lg:block"></div>
-			<div class="footer__col col-span-4 lg:col-span-5">
+			<div class="footer__col col-span-2 row-span-2 hidden lg:block 2xl:row-span-1"></div>
+			<div class="footer__col col-span-4 lg:col-span-10 2xl:col-span-5">
 				<span
-					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover md:-left-72 md:-top-72 md:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
+					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover lg:-left-72 lg:-top-72 lg:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
 				></span>
 				<h2 class="font-noxrmal z-10 text-6xl not-italic lg:text-9xl">
 					Let's <br />Connect
 				</h2>
 			</div>
-			<div class="footer__col col-span-4 lg:col-span-5">
+			<div class="footer__col col-span-4 lg:col-span-10 2xl:col-span-5">
 				<p class="font-headings text-lg leading-8 text-neutral-500">
 					I'm remote-friendly and always open to new opportunities. Feel free to email me at
 					<a
@@ -51,7 +47,7 @@ import { Icon } from 'astro-icon/components'
 
 	<style>
 		.footer {
-			@apply relative flex min-h-[600px] items-end py-12 text-neutral-600 lg:min-h-[800px] lg:py-40 dark:text-neutral-400;
+			@apply relative flex min-h-[800px] items-end py-12 text-neutral-600 lg:pb-40 lg:pt-60 2xl:py-40 dark:text-neutral-400;
 		}
 		.footer__container {
 			@apply container relative z-[1] mx-auto px-6;
