--- a/src/layouts/CaseStudyDesignLayout.astro
+++ b/src/layouts/CaseStudyDesignLayout.astro
@@ -25,9 +25,9 @@ const SEO = {
 	<!-- Intro -->
 	<Section id="intro" classes="!pt-0">
 		<Row>
-			<Col span="12" spanMobile="4">
+			<Col span="10" spanMobile="4">
 				<div>
-					<h1 class="text-center">
+					<h1>
 						{frontmatter.title}
 					</h1>
 				</div>
@@ -127,6 +127,7 @@ const SEO = {
 									figcaption={item.figcaption}
 									cite={item.cite}
 									align="left"
+									quoteClasses="italic font-headings"
 								/>
 							</div>
 						))
