--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -7,17 +7,17 @@
 <footer id="contact" class="footer [.mode-dark_&]:!text-neutral-400">
 	<div class="footer__container">
 		<div class="footer__row">
-			<div class="footer__col col-span-2 row-span-2 hidden lg:block 2xl:row-span-1"></div>
-			<div class="footer__col col-span-4 lg:col-span-10 2xl:col-span-5">
+			<div class="footer__col col-span-2 row-span-2 hidden lg:block xl:row-span-1"></div>
+			<div class="footer__col col-span-4 lg:col-span-10 xl:col-span-5">
 				<span
 					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover lg:-left-72 lg:-top-72 lg:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
 				></span>
-				<h2 class="font-noxrmal z-10 text-6xl not-italic lg:text-9xl">
+				<h2 class="font-noxrmal animate z-10 text-6xl not-italic lg:text-9xl">
 					Let's <br />Connect
 				</h2>
 			</div>
-			<div class="footer__col col-span-4 lg:col-span-10 2xl:col-span-5">
-				<p class="font-headings text-lg leading-8 text-neutral-500">
+			<div class="footer__col col-span-4 lg:col-span-10 xl:col-span-5">
+				<p class="font-headings animate text-lg leading-8 text-neutral-500">
 					I'm remote-friendly and always open to new opportunities. Feel free to email me at
 					<a
 						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
