--- a/src/layouts/CaseStudyCodeLayout.astro
+++ b/src/layouts/CaseStudyCodeLayout.astro
@@ -51,7 +51,7 @@ const SEO = {
 	</Section>
 
 	<!-- About the project -->
-	<Section id="about">
+	<Section id="about-the-project">
 		<Row classes="collection-body basic-text basic-text--lg">
 			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">About the project</h2>
@@ -66,7 +66,7 @@ const SEO = {
 	</Section>
 
 	<!-- What we did -->
-	<Section id="experience">
+	<Section id="what-we-did">
 		<Row classes="collection-body basic-text basic-text--lg">
 			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">What we did</h2>
@@ -105,7 +105,7 @@ const SEO = {
 	}
 
 	<!-- Client feedback -->
-	<Section id="feedback">
+	<Section id="client-feedback">
 		<Row>
 			<Col span="2" spanMobile="4">
 				<h2 class="lg:text-right">Feedback</h2>
