--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -53,7 +53,7 @@
 			@apply container relative z-[1] mx-auto px-6;
 		}
 		.footer__row {
-			@apply grid grid-cols-4 justify-end gap-6 lg:grid-cols-12 lg:gap-8;
+			@apply grid grid-cols-4 justify-end gap-9 lg:grid-cols-12;
 		}
 		.footer__col {
 			@apply relative self-end;
