--- a/src/pages/case-studies-design/[...page].astro
+++ b/src/pages/case-studies-design/[...page].astro
@@ -61,7 +61,7 @@ const sortedCaseStudies = page.data.sort((a: any, b: any) => {
 				<h2 class="sticky top-4 lg:text-right">Case Studies</h2>
 			</Col>
 			<Col span="10" spanMobile="4">
-				<div class="grid grid-cols-1 gap-x-6 gap-y-12 lg:grid-cols-3">
+				<div class="grid grid-cols-1 gap-9 lg:grid-cols-3">
 					{
 						sortedCaseStudies.map((caseStudy: any) => (
 							<CaseStudyCard
