--- a/src/pages/demos.astro
+++ b/src/pages/demos.astro
@@ -70,7 +70,7 @@ import demoData from '../data/json-files/demoData.json'
 									</a>
 								)}
 								<CardBody classes="!px-0 !pb-4 text-neutral-600 dark:text-neutral-400 [.mode-dark_&]:text-neutral-400 text-base">
-									<h3 class="mb-4 text-lg not-italic text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white [&_a]:text-inherit">
+									<h3 class="mb-4 text-lg text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white [&_a]:text-inherit">
 										<a href={item.link} class="[.mode-dark_&]:!text-white">
 											{item.title}
 										</a>
@@ -90,7 +90,7 @@ import demoData from '../data/json-files/demoData.json'
 		<Row>
 			<Col span="2" spanMobile="4" classes="h-full">
 				<div class="sticky top-4">
-					<h2 class="font-ubuntu">Developers</h2>
+					<h2 class="font-ubuntu not-italic">Developers</h2>
 					<p class="font-robotoMono">
 						Dark UI theme, bold sans-serif fonts, snappy transitions, and a clean layout focused on
 						performance and clarity.
