--- a/src/pages/demos.astro
+++ b/src/pages/demos.astro
@@ -46,8 +46,8 @@ import demoData from '../data/json-files/demoData.json'
 		<Row>
 			<Col span="2" spanMobile="4" classes="h-full">
 				<div class="sticky top-4">
-					<h2>Designers</h2>
-					<p>
+					<h2 class="font-playfair italic">Designers</h2>
+					<p class="font-nunito">
 						Light color palette, elegant calligraphy-style fonts, soft animations, and a refined
 						aesthetic for visual storytelling.
 					</p>
@@ -70,12 +70,12 @@ import demoData from '../data/json-files/demoData.json'
 									</a>
 								)}
 								<CardBody classes="!px-0 !pb-4 text-neutral-600 dark:text-neutral-400 [.mode-dark_&]:text-neutral-400 text-base">
-									<h3 class="mb-4 text-lg text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white [&_a]:text-inherit">
+									<h3 class="mb-4 font-playfair text-lg font-normal italic text-neutral-900 transition-colors duration-300 hover:text-primary-500 dark:text-white [&_a]:text-inherit">
 										<a href={item.link} class="[.mode-dark_&]:!text-white">
 											{item.title}
 										</a>
 									</h3>
-									<p>{item.description}</p>
+									<p class="font-nunito">{item.description}</p>
 								</CardBody>
 							</Card>
 						))
