Removed unnecessary classes

--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -4,13 +4,13 @@
 // Description: A component that displays a contact me section with a title, first column, and second column.
 ---
 
-<footer id="contact" class="footer [.mode-dark_&]:!text-neutral-400">
+<footer id="contact" class="footer">
 	<div class="footer__container">
 		<div class="footer__row">
 			<div class="footer__col col-span-2 row-span-2 hidden lg:block xl:row-span-1"></div>
 			<div class="footer__col col-span-4 lg:col-span-10 xl:col-span-5">
 				<span
-					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover lg:-left-72 lg:-top-72 lg:size-[31.25rem] dark:bg-secondary-400 [.mode-dark_&]:bg-secondary-400"
+					class="animate absolute -left-40 -top-52 z-[-1] size-80 rounded-full bg-primary-400 object-cover lg:-left-72 lg:-top-72 lg:size-[31.25rem] dark:bg-secondary-400"
 				></span>
 				<h2 class="font-noxrmal animate z-10 text-6xl not-italic lg:text-9xl">
 					Let's <br />Connect
@@ -19,27 +19,18 @@
 			<div class="footer__col col-span-4 lg:col-span-10 xl:col-span-5">
 				<p class="font-headings animate text-lg leading-8 text-neutral-500">
 					I'm remote-friendly and always open to new opportunities. Feel free to email me at
-					<a
-						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
-						href="mailto:milo@studio.com"
-					>
+					<a class="text-neutral-800 dark:text-white" href="mailto:milo@studio.com">
 						milo@studio.com
 					</a>
 					or call me at
-					<a
-						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
-						href="tel:+13235550198"
-					>
+					<a class="text-neutral-800 dark:text-white" href="tel:+13235550198">
 						+1 (323) 555-0198</a
 					>. You can also find me on Instagram at <a
-						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
+						class="text-neutral-800 dark:text-white"
 						href="#"
 					>
 						@milo.design
-					</a> or view my <a
-						class="text-neutral-800 dark:text-white [.mode-dark_&]:text-white"
-						href="#">resume</a
-					> for more details.
+					</a> or view my <a class="text-neutral-800 dark:text-white" href="#">resume</a> for more details.
 				</p>
 			</div>
 		</div>
