--- a/src/pages/index-code-image.astro
+++ b/src/pages/index-code-image.astro
@@ -61,9 +61,7 @@ const imageSource = '/hero/hero-image-secondary.png'
 						Hi, <br />I’m Milo <br />& I code.
 					</h1>
 
-					<ul
-						class="font-headings flex flex-wrap gap-9 text-lg font-medium [.mode-dark_&]:text-neutral-400"
-					>
+					<ul class="font-headings flex flex-wrap gap-9 text-lg font-medium">
 						<li class="animate">
 							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
 						</li>
@@ -206,7 +204,7 @@ const imageSource = '/hero/hero-image-secondary.png'
 					link="/case-studies-code"
 					type="link"
 					variation="link"
-					classes="lg:self-end lg:!justify-end  w-full [.mode-dark_&]:!text-secondary-500"
+					classes="lg:self-end lg:!justify-end  w-full"
 				>
 					<span class="sr-only">View more case studies</span>
 					more <Icon name="long-arrow-right" />
