--- a/src/layouts/LayoutDesign.astro
+++ b/src/layouts/LayoutDesign.astro
@@ -52,13 +52,7 @@ const {
 <!doctype html>
 <html lang="en" class={`scroll-animation mode-light ${classes}`}>
 	<Header title={title} description={description} ogImage={ogImage} noindex={noindex} />
-	<body
-		class:list={[
-			'mode-light', // TODO: remove this when ModeSwitcher is implemented
-			// { ['mode-' + `${configData.mode}`]: configData.mode }, // TODO: Add this when ModeSwitcher is implemented
-			{ ['scroll-animation']: configData.scrollAnimations }
-		]}
-	>
+	<body class:list={[{ ['scroll-animation']: configData.scrollAnimations }]}>
 		<GoogleTagManager />
 		{navigation !== 'none' && <NavigationBar type={navigation} />}
 		<Main>
