--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -89,7 +89,7 @@ function isActivePath(currentPath: string): boolean {
 			</div>
 		</nav>
 		{/* Theme Switcher */}
-		<!-- <ModeSwitcher /> -->
+		<ModeSwitcher />
 	</div>
 </header>
 
