refactored theme switcher

--- a/src/pages/index-image.astro
+++ b/src/pages/index-image.astro
@@ -62,7 +62,7 @@ const imageSource = '/hero/hero-image-primary.png'
 						Hi, <br />I’m Milo <br />& I design.
 					</h1>
 
-					<ul class="font-headings flex flex-wrap gap-9 text-lg italic">
+					<ul class="font-headings flex flex-wrap gap-6 text-lg italic lg:gap-9">
 						<li class="animate">
 							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
 						</li>
