--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -60,7 +60,7 @@ const videoSource = '/videos/hero-video-primary.mp4'
 						Hi, <br />I’m Milo <br />& I design.
 					</h1>
 
-					<ul class="font-headings flex flex-wrap gap-9 text-lg italic">
+					<ul class="font-headings flex flex-wrap gap-6 text-lg italic lg:gap-9">
 						<li class="animate">
 							<a class="text-inherit" href="mailto:milo@studio.com">milo@studio.com</a>
 						</li>
