--- a/src/components/ui/NavigationBar.astro
+++ b/src/components/ui/NavigationBar.astro
@@ -55,7 +55,8 @@ function isActivePath(currentPath: string): boolean {
 	<div class="header__container">
 		<nav aria-label="main navigation" role="navigation" class="header__nav">
 			{/* Theme Switcher */}
-			<ModeSwitcher />
+			<!-- <ModeSwitcher /> -->
+
 			{/* Menu toggle */}
 			<button
 				id="header-toggle"
