--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,11 +12,17 @@ p {
 	@apply mb-6 text-lg leading-8 last:mb-0;
 }
 h1,
+.h1,
 h2,
+.h2,
 h3,
+.h3,
 h4,
+.h4,
 h5,
-h6 {
+.h5,
+h6,
+.h6 {
 	@apply text-neutral-900 last:mb-0 dark:text-white [&>strong]:text-primary-500 [.mode-dark_&]:text-white [.mode-light_&]:text-neutral-900;
 }
 h1 strong,
@@ -28,38 +34,50 @@ h6 strong {
 	font-weight: inherit;
 }
 h1,
+.h1,
 h2,
-h3 {
+.h2,
+h3,
+.h3 {
 	@apply mb-6 font-bold;
 }
 
 h4,
+.h4,
 h5,
-h6 {
+.h5,
+h6,
+.h6 {
 	@apply mb-4 font-semibold;
 }
 
-h1 {
+h1,
+.h1 {
 	@apply mt-9 text-6xl font-bold leading-none md:text-9xl;
 }
 
-h2 {
+h2,
+.h2 {
 	@apply text-3xl leading-8;
 }
 
-h3 {
+h3,
+.h3 {
 	@apply text-2xl lg:text-3xl;
 }
 
-h4 {
+h4,
+.h4 {
 	@apply text-xl lg:text-2xl;
 }
 
-h5 {
+h5,
+.h5 {
 	@apply text-lg lg:text-xl;
 }
 
-h6 {
+h6,
+.h6 {
 	@apply text-base lg:text-lg;
 }
 main a {
