prevent lazy loading on hero image

--- a/src/pages/index-code-image.astro
+++ b/src/pages/index-code-image.astro
@@ -55,6 +55,7 @@ const imageSource = '/hero/hero-image-secondary.png'
 					height={500}
 					class="animate absolute -left-40 -top-56 size-80 rounded-full object-cover md:-left-72 md:-top-44 md:size-[31.25rem]"
 					format="webp"
+					loading="eager"
 				/>
 				<div class="animate relative z-10">
 					<h1 class="max-w-3xl">
