--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@ html {
 }
 body {
 	--gradient-stop: 15%;
-	@apply bg-[url('/bgs/milo-bg-light.avif')] text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:bg-neutral-950 dark:bg-[url('/bgs/milo-bg-dark.avif')] dark:text-neutral-400 [&.mode-dark]:bg-neutral-950 [&.mode-dark]:bg-[linear-gradient(90deg,rgba(34,0,77,.3)_0%,rgba(34,0,77,0)_100%),url('/bgs/milo-bg-dark.avif')] [&.mode-dark_p]:text-neutral-400 [&.mode-light]:bg-[url('/bgs/milo-bg-light.avif')];
+	@apply bg-[url('/bgs/milo-bg-light.webp')] text-neutral-500 has-[.header\_\_menu--open]:overflow-hidden lg:has-[.header\_\_menu--open]:overflow-auto dark:bg-neutral-950 dark:bg-[url('/bgs/milo-bg-dark.webp')] dark:text-neutral-400 [&.mode-dark]:bg-neutral-950 [&.mode-dark]:bg-[linear-gradient(90deg,rgba(34,0,77,.3)_0%,rgba(34,0,77,0)_100%),url('/bgs/milo-bg-dark.webp')] [&.mode-dark_p]:text-neutral-400 [&.mode-light]:bg-[url('/bgs/milo-bg-light.webp')];
 }
 
 /* Main typography */
