--- a/src/styles/fontsCode.css
+++ b/src/styles/fontsCode.css
@@ -3,11 +3,17 @@ body,
 	@apply font-robotoMono;
 }
 
+.h1,
 h1,
+.h2,
 h2,
+.h3,
 h3,
+.h4,
 h4,
+.h5,
 h5,
+.h6,
 h6,
 .font-headings {
 	@apply font-ubuntu font-bold;
