--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -52,10 +52,10 @@ const { data, classes } = Astro.props
 		@apply relative flex flex-col;
 	}
 	.feed__item {
-		@apply relative flex gap-6 pb-24 after:absolute after:bottom-0 after:left-0 after:top-0 after:-translate-x-1/2 after:border after:border-primary-200 first:after:top-2 last:pb-0 last:after:bottom-auto last:after:h-2 lg:after:left-[11.5rem] dark:after:border-neutral-800;
+		@apply relative flex gap-6 pb-24 after:absolute after:bottom-0 after:left-0 after:top-0 after:-translate-x-1/2 after:border after:border-primary-200 first:after:top-2 last:pb-0 last:after:bottom-auto last:after:h-2 lg:after:left-[11.5rem] dark:after:border-neutral-700;
 	}
 	.feed__item-container {
-		@apply relative flex flex-1 flex-col pl-6 before:absolute before:-left-2 before:top-2 before:z-10 before:size-4 before:rounded-full before:bg-primary-400 before:ring-2 before:ring-primary-200 after:absolute after:-left-2 after:top-2 after:size-4 after:rounded-full after:bg-primary-400 after:opacity-80 lg:pl-12 dark:before:bg-secondary-500 dark:before:ring-neutral-800 dark:after:bg-secondary-500 [&_p]:m-0 [.feed\_\_item:hover_&:after]:animate-ping;
+		@apply relative flex flex-1 flex-col pl-6 before:absolute before:-left-2 before:top-2 before:z-10 before:size-4 before:rounded-full before:bg-primary-400 before:ring-2 before:ring-primary-200 after:absolute after:-left-2 after:top-2 after:size-4 after:rounded-full after:bg-primary-400 after:opacity-80 lg:pl-12 dark:before:bg-secondary-500 dark:before:ring-secondary-800 dark:after:bg-secondary-500 [&_p]:m-0 [.feed\_\_item:hover_&:after]:animate-ping;
 	}
 	.feed__item-date_info {
 		@apply hidden text-2xl font-medium leading-8 text-neutral-900 lg:flex lg:w-40 lg:flex-col lg:gap-2 dark:text-white;
@@ -65,10 +65,10 @@ const { data, classes } = Astro.props
 		@apply text-sm font-semibold;
 	}
 	.feed__item-date_info-company {
-		@apply text-neutral-600;
+		@apply text-neutral-600 dark:text-neutral-300;
 	}
 	.feed__item-date_info-location {
-		@apply text-neutral-500;
+		@apply text-neutral-500 dark:text-neutral-400;
 	}
 	.feed__item-header {
 		@apply text-2xl font-medium leading-8 text-neutral-900 dark:text-white lg:[&_span]:hidden;
