--- a/src/styles/fontsDesign.css
+++ b/src/styles/fontsDesign.css
@@ -3,19 +3,36 @@ body,
 	@apply font-nunito;
 }
 
+.h1,
 h1,
 h2,
+.h2,
 h3,
+.h3,
 h4,
+.h4,
 h5,
+.h5,
 h6,
+.h6,
 .font-headings {
 	@apply font-playfair font-normal;
 }
 h2,
+.h2,
 h3,
+.h3,
 h4,
+.h4,
 h5,
-h6 {
+.h5,
+h6,
+.h6 {
 	@apply italic;
+}
+h3,
+.h3,
+h4,
+.h4 {
+	@apply font-medium;
 }
