--- a/src/components/ui/Feeds/ExperienceFeed.astro
+++ b/src/components/ui/Feeds/ExperienceFeed.astro
@@ -71,7 +71,7 @@ const { data, classes } = Astro.props
 		@apply text-neutral-500 dark:text-neutral-400;
 	}
 	.feed__item-header {
-		@apply text-2xl font-medium leading-8 text-neutral-900 dark:text-white lg:[&_span]:hidden;
+		@apply text-2xl leading-8 text-neutral-900 dark:text-white lg:[&_span]:hidden;
 	}
 	.feed__item-text {
 		@apply max-w-5xl text-lg leading-8;
