--- a/src/pages/case-studies-design/[...page].astro
+++ b/src/pages/case-studies-design/[...page].astro
@@ -92,6 +92,7 @@ const sortedCaseStudies = page.data.sort((a: any, b: any) => {
 							length={page.lastPage}
 							size={page.size}
 							total={page.total}
+							collection="design"
 						/>
 					</Col>
 				</Row>
